# open-usage

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix  release-plz.toml
.github/: SMOKE_ACTIONS
.github/workflows/: ci.yml  manual-version-bump.yml  release-plz.yml  release.yml
scripts/: gen-changelog.sh  update-changelog.sh
src/: activity.rs  api.rs  cost.rs  creds.rs  grok_ledger.rs  grok_proxy.rs  http.rs  main.rs  model.rs  output.rs  pricing-data.json  pricing.rs  probe.rs  proc.rs  secret.rs  util.rs
src/providers/: amp.rs  antigravity.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  devin.rs  factory.rs  grok.rs  jetbrains.rs  kimi.rs  kiro.rs  minimax.rs  mod.rs  opencode_go.rs  perplexity.rs  synthetic.rs  zai.rs
tests/: cli.rs
