[package]
name = "open-usage"
version = "0.1.0"
description = "Linux-native AI coding subscription usage tracker (daemon + CLI + Waybar)"
edition = "2021"
license = "MIT"
authors = ["friend"]

[[bin]]
name = "openusage"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json", "socks", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 2
strip = true
