[package]
name = "open-usage"
version = "0.0.1"
description = "Linux-native AI coding subscription usage tracker (daemon + CLI + Waybar)"
edition = "2021"
license = "MIT"
authors = ["Grok Insider <admin@grokinsider.net>"]
# Do NOT set `publish = false` here. release-plz skips manifest-unpublishable
# packages entirely (no Release PR / git tag). Crates.io is gated in
# release-plz.toml (`git_only = true`, `publish = false`) instead.

[[bin]]
name = "openusage"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json", "socks", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex-lite = "0.1"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "local-offset"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"
memchr = "2"

# SIGPIPE handling is Unix-only; Windows has no such signal.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 2
strip = true
